# Oillak

./: .gitignore  CMakeLists.txt  README.md
OillakWindowManager/: OillakWindowManager.vcxproj  OillakWindowManager.vcxproj.filters  README.md  VulkanTypes.h
OillakWindowManager/headers/: Model.h  OillakEngine.h  OillakWindowManager.vcxproj  Scene.h  VulkanRenderer.h  VulkanTypes.h  VulkanUtils.h  window.h
OillakWindowManager/src/: Model.cpp  OillakEngine.cpp  VulkanRenderer.cpp  buildShaders.bat  main.cpp  shader.frag  shader.vert  vert.spv  window.cpp
OillakWindowManager/tools/: ILoggable.h  OillakLogger.cpp  OillakLogger.h
OillakWindowManager/x64/Debug/: OillakWindowManager.exe.recipe  OillakWindowManager.ilk  vc145.idb
OillakWindowManager/x64/Debug/OillakWi.6dd87239.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  OillakWindowManager.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
c-plus-plus/: c-plus-plus.slnx  c-plus-plus.vcxproj  c-plus-plus.vcxproj.filters  circle.cpp  circle.h  line.cpp  line.h  main.cpp  rectangle.h  shape.h  vector.h  window.cpp  window.h
c-plus-plus/c-plus-plus/Debug/: c-plus-plus.exe.recipe
c-plus-plus/c-plus-plus/Debug/c-plus-plus.tlog/: c-plus-plus.lastbuildstate
c-plus-plus/c-plus-plus/x64/Debug/: c-plus-plus.exe.recipe  c-plus-plus.ilk  vc145.idb
c-plus-plus/c-plus-plus/x64/Debug/c-plus-plus.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  c-plus-plus.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
sandbox/: line.cpp  line.h  main.cpp  rectangle.h  shape.h
shaders/: shader.vert.spv
temp/: patch_note.txt
